--- a/nginx/defaults/fpm.conf
+++ b/nginx/defaults/fpm.conf
@@ -1,4 +1,5 @@
 try_files $uri /index.php;
+
 fastcgi_split_path_info ^(.+\.php)(/.+)$;
 fastcgi_index index.php;
 
@@ -8,8 +9,12 @@ fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 fastcgi_param PATH_INFO $fastcgi_path_info;
 
 proxy_pass_request_headers on;
+
 proxy_no_cache $cookie_nocache $arg_nocache$arg_comment;
 proxy_no_cache $http_pragma $http_authorization;
+
 proxy_cache_bypass $cookie_nocache $arg_nocache $arg_comment;
 proxy_cache_bypass $http_pragma $http_authorization;
+
 proxy_set_header HTTP_AUTHORIZATION $http_authorization;
+proxy_set_header X-Request-Id $request_id;
