--- a/nginx/octane.conf
+++ b/nginx/octane.conf
@@ -1,13 +1,16 @@
 location @octane {
     proxy_intercept_errors on;
 
-    include defaults/octane.conf;
+    proxy_http_version 1.1;
 
-    proxy_pass http://backend;
-}
-
-location @octane-intercept-errors-off {
-    include defaults/octane.conf;
+    proxy_set_header Host $http_host;
+    proxy_set_header Scheme $scheme;
+    proxy_set_header SERVER_PORT $server_port;
+    proxy_set_header REMOTE_ADDR $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+    proxy_set_header X-Request-Id $request_id;
 
     proxy_pass http://backend;
 }
